// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@layout: matches snapshot default 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderColor": "#3366FF",
        "borderRadius": 3,
        "borderWidth": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      undefined,
    ]
  }
/>
`;

exports[`@layout: matches snapshot with styles 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderColor": "#3366FF",
        "borderRadius": 3,
        "borderWidth": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      Object {
        "height": 300,
      },
    ]
  }
/>
`;
